mobile layout issue fixed

--- a/style.css
+++ b/style.css
@@ -432,6 +432,29 @@ padding:5px; /* Padding for spacing */
   margin-top: 4vh;
 }
 
+
+
+
+.projectCard {
+  background-color: #111;
+  border: 1px solid #ffd700;
+  border-radius: 15px;
+  padding: 1vh 1vw 1vh 1vw;
+  width: 90%;
+  height: auto;
+  text-align: center;
+  color: white;
+  box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
+  transition: transform 0.3s ease;
+
+  /* 🔥 Change this */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+
+
 @media (max-width: 768px) {
 .projectCard {
   background-color: #111;
@@ -450,27 +473,6 @@ padding:5px; /* Padding for spacing */
   flex-direction: column;
   align-items: center;
 }
-
-
-}
-
-.projectCard {
-  background-color: #111;
-  border: 1px solid #ffd700;
-  border-radius: 15px;
-  padding: 1vh 1vw;
-  width: 90%;
-  height: auto;
-  text-align: center;
-  color: white;
-  box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
-  transition: transform 0.3s ease;
-
-  /* 🔥 Change this */
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  
 }
 
 .project-card:hover {
@@ -488,7 +490,7 @@ padding:5px; /* Padding for spacing */
   display: flex;
   justify-content: center;
   overflow: hidden;
-  margin-bottom: 1vh; 
+  
 }
   
 
